# piper-rendering

./: .gitignore  CMakeLists.txt  README.MD  buffer.cpp  buffer.h  input.cpp  input.h  main.cpp  quad.cpp  quad.h  screen.cpp  screen.h  shader.cpp  shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: main.frag  main.vert
